gcc/testsuite/rust/rustc/ui/hygiene/expansion-info-reset.rs
fn main() {
    format_args!({ #[derive(Clone)] struct S; });
// { dg-error "" "" { target *-*-* } .-1 }
}

